--- a/code/orf8ko_severity.Rmd
+++ b/code/orf8ko_severity.Rmd
@@ -2,7 +2,7 @@
 title: The relationship between SARS-CoV-2 ORF8 knockout and clinical severity in
   Washington State
 author: "Cassia Wagner"
-date: "9/9/2022"
+date: "Updated September 21, 2022"
 output: pdf_document
 ---
 
@@ -48,10 +48,18 @@ df <- df %>%
 df <- df %>%
   mutate(died = ifelse(is.na(death_date), "no", "yes"))
 
+## Create clade bucket
+df <- df %>%
+  mutate(variant = ifelse(Nextstrain_clade == "20A" | Nextstrain_clade=="20B"|Nextstrain_clade=="20C"|Nextstrain_clade=="20D"|Nextstrain_clade=="20G"|Nextstrain_clade =="19A"|Nextstrain_clade=="19B", "Non-VOC", NA)) %>%
+  mutate(variant = ifelse(Nextstrain_clade == "20J (Gamma, V3)", "Gamma", variant)) %>%
+  mutate(variant = ifelse(Nextstrain_clade == "21I (Delta)" | Nextstrain_clade=="21J (Delta)"|Nextstrain_clade=="21A (Delta)","Delta",variant)) %>%
+  mutate(variant = ifelse(Nextstrain_clade == "21K (Omicron)" | Nextstrain_clade=="21L (Omicron)"|Nextstrain_clade=="21M (Omicron)"|Nextstrain_clade == "22A (Omicron)" | Nextstrain_clade=="22B (Omicron)"|Nextstrain_clade=="22C (Omicron)"|Nextstrain_clade=="22D (Omicron)","Omicron",variant))
+
 ## Variable cleaning
 df$hosp = fct_relevel(df$hosp, "No", "Yes")
 df$died = fct_relevel(df$died, "no", "yes")
 df$age_group = fct_relevel(df$age_group, "0-4", "5-17", "18-44", "45-64", "65-79", "80+", "Unknown")
+df$variant = fct_relevel(df$variant, "Non-VOC", "Delta", "Omicron", "Gamma")
 ```
 ## Regression
 I'm using a multivariable logistic regression to compare the impact of ORF8KO on two different clinical outcomes.
@@ -61,6 +69,26 @@ Second, I look at the probability of death.
 The general logistic regression I'm performing takes the form:
 $$log(\frac{\pi_i}{1-\pi_i}) = \beta_0 + \beta_1 Orf8KO_i + \beta_2 AgeGroup_i + \beta_3 SexAtBirth_i + \beta_4 Vaccination_i$$
 
+## Power calcs
+To check if I have enough samples to be powered to detect an effect, I'll run
+first run some power calculations. The equation I will be using is:
+$$n_i = 2(\frac{Z_{1-\frac{\alpha}{2}}+Z_{1-\beta}}{ES})^2$$
+where $$ES = \frac{|p_1-p_2|}{\sqrt{(p(1-p))}}$$
+
+```{r,echo=FALSE}
+get_sample_size = function(p,propko,effect,Za=1.645, Zb=0.53){
+  es = effect*(p/((1-propko) + (propko*effect)))/sqrt(p*(1-p))
+  n = 2*(((Za+Zb)/es)**2)
+  return(n)
+}
+effect = 0.5
+
+get_sample_size2 = function(p1,p2){
+  n = ((1.645+0.53)**2)*(((p1*(1-p1))+(p2*(1-p2)))/((p1-p2)**2))
+  return(n)
+}
+```
+
 ## Hospitalization
 ```{r,echo=FALSE,message=FALSE}
 df_hosp <- df %>%
@@ -69,7 +97,23 @@ df_hosp <- df %>%
   filter(!is.na(age_group) & !is.na(hosp) & !is.na(orf8ko) & !is.na(sex_at_birth) & !is.na(vaccinated))
 df_hosp$age_group = as.numeric(df_hosp$age_group)
 ```
-```{r, echo=FALSE,message=FALSE,warning=FALSE}
+```{r, echo=FALSE,message=FALSE,warning=FALSE,results="asis"}
+freq_tab_hosp <- df_hosp %>%
+  count(hosp)%>%
+  mutate(prop= prop.table(n))
+freq_tab_hosp_2 <- df_hosp %>%
+  filter(Nextstrain_clade == "20A" | Nextstrain_clade=="20B"|Nextstrain_clade=="20C"|Nextstrain_clade=="20D"|Nextstrain_clade=="20G") %>%
+  count(hosp,orf8ko)%>%
+  group_by(orf8ko) %>%
+  mutate(prop= prop.table(n))
+prop_hosp <- freq_tab_hosp$prop[2]
+count_tab_hosp <- df_hosp %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_hosp$prop[2]
+ss_hosp <- get_sample_size(prop_hosp, prop_ko,0.15,1.645,0.84)
+cat(paste("\nSample size needed to detect a 15% effect on risk of hospitalization with 90% confidence & 80% power: ",format(ss_hosp,digits=4)))
+print(kable(count_tab_hosp, caption = "Samples with hospitalization data."))
 reg1 <- glm(hosp ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_hosp)
 or1 <- as.tibble(questionr::odds.ratio(reg1, level=(1-(0.05))), rownames = "Predictor")
 plot1 <- df_hosp %>%
@@ -81,6 +125,12 @@ plot1 <- df_hosp %>%
   scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
   theme_minimal() +
   theme(text = element_text(size = 10)) 
+```
+```{r,echo=FALSE,results='hide',message=FALSE}
+reg1_clade <- glm(hosp ~ orf8ko + age_group + sex_at_birth + vaccinated + variant, family = "binomial", data = df_hosp)
+or1_clade <- as.tibble(questionr::odds.ratio(reg1_clade, level=(1-(0.05))), rownames = "Predictor")
+summary(reg1)
+summary(reg1_clade)
 ```
 ```{r,echo=FALSE,fig.dim = c(3,2), out.width="50%", fig.align='center'}
 plot1
@@ -94,7 +144,18 @@ df_death<- df %>%
   filter(!is.na(age_group) & !is.na(died) & !is.na(orf8ko) & !is.na(sex_at_birth) & !is.na(vaccinated))
 df_death$age_group = as.numeric(df_death$age_group)
 ```
-```{r, echo=FALSE,message=FALSE,warning=FALSE}
+```{r, echo=FALSE,message=FALSE,warning=FALSE,results="asis"}
+freq_tab_death <- df_death %>%
+  count(died)%>%
+  mutate(prop= prop.table(n))
+prop_death <- freq_tab_death$prop[2]
+count_tab_death <- df_death %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_death$prop[2]
+ss_death <- get_sample_size(prop_death, prop_ko,0.25,1.645,0.53)
+cat(paste("\nSample size needed to detect a 25% effect on risk of death with 90% confidence & 70% power: ",format(ss_death,digits=3)))
+print(kable(count_tab_death, caption = "Samples with death data."))
 reg2 <- glm(died ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_death)
 or2 <- as.tibble(questionr::odds.ratio(reg2, level=(1-(0.05))), rownames = "Predictor")
 plot2 <- df_death %>%
@@ -113,84 +174,313 @@ kable(or2[2:6,], caption = "Odds Ratio of Death", align="lllll")
 ```
 
 ## Decomposed by variant
-ORF8KO is not evenly distributed across variants. Therefore, it's possible that
+Orf8KO is not evenly distributed across variants. Therefore, it's possible that
 variant is a confounder for the correlation between ORF8KO and reduced risk of 
-hospitalization. To address this: I'll run the same analyses for each variant
-with at least 30 samples with an ORF8KO.
+hospitalization. 
 
-```{r,echo=FALSE, message=FALSE}
-clades_30_hosp <- df_hosp %>%
-  group_by(Nextstrain_clade, orf8ko) %>%
-  summarise(number = n()) %>%
-  arrange(Nextstrain_clade) %>%
-  filter(number > 30) %>%
-  group_by(Nextstrain_clade) %>%
-  summarise(rows = n()) %>%
-  filter(rows > 1) %>%
-  pull(Nextstrain_clade)
+To address this: I'll run the same analyses for each variant.To add power, I've 
+combined all non-VOC viruses (except for 19A & 19B, which have very few ORF8KO's 
+and are Spike 614D) into one bucket. I have also combined all Delta clades into 
+one group and all Omicron clades into one group.
 
-clades_30_death <- df_death %>%
-  group_by(Nextstrain_clade, orf8ko) %>%
-  summarise(number = n()) %>%
-  arrange(Nextstrain_clade) %>%
-  filter(number > 30) %>%
-  group_by(Nextstrain_clade) %>%
-  summarise(rows = n()) %>%
-  filter(rows > 1) %>%
-  pull(Nextstrain_clade)
+```{r, echo=FALSE, message=FALSE,fig.dim = c(3,2), out.width="50%",warning=FALSE,results="asis", fig.align='center'}
+## Non-voc virus
+cat(paste("##","Non-VOC viruses\n*Hospitalization:*\n"))
+freq_tab_hosp <- df_hosp %>%
+  filter(Nextstrain_clade == "20A" | Nextstrain_clade=="20B"|Nextstrain_clade=="20C"|Nextstrain_clade=="20D"|Nextstrain_clade=="20G") %>%
+  count(hosp)%>%
+  mutate(prop= prop.table(n))
+freq_tab_hosp_2 <- df_hosp %>%
+  filter(Nextstrain_clade == "20A" | Nextstrain_clade=="20B"|Nextstrain_clade=="20C"|Nextstrain_clade=="20D"|Nextstrain_clade=="20G") %>%
+  count(hosp,orf8ko)%>%
+  group_by(orf8ko) %>%
+  mutate(prop= prop.table(n))
+p1 = freq_tab_hosp_2$prop[3]
+p2 = freq_tab_hosp_2$prop[4]
+prop_hosp <- freq_tab_hosp$prop[2]
+count_tab_hosp <- df_hosp %>%
+  filter(Nextstrain_clade == "20A" | Nextstrain_clade=="20B"|Nextstrain_clade=="20C"|Nextstrain_clade=="20D"|Nextstrain_clade=="20G") %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_hosp$prop[2]
+ss_hosp <- get_sample_size(prop_hosp, prop_ko,effect)
+ss_hosp_2 <- get_sample_size2(p1,p2)
+cat(paste("\nSample size needed to detect a ",format(effect*100,digits=2), "% effect on risk of hospitalization with 90% confidence & 70% power:: ",format(ss_hosp,digits=4)))
+print(kable(count_tab_hosp, caption = "Non-VOC samples with hospitalization data."))
+reg_hosp <- glm(hosp ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_hosp[df_hosp$Nextstrain_clade == "20A" | df_hosp$Nextstrain_clade=="20B"|df_hosp$Nextstrain_clade=="20C"|df_hosp$Nextstrain_clade=="20D"|df_hosp$Nextstrain_clade=="20G",])
+or_hosp <- as.tibble(questionr::odds.ratio(reg_hosp, level=(1-(0.05))), rownames = "Predictor")
+plot_hosp <- df_hosp %>%
+  filter(Nextstrain_clade == "20A" | Nextstrain_clade=="20B"|Nextstrain_clade=="20C"|Nextstrain_clade=="20D"|Nextstrain_clade=="20G") %>%
+  ggplot(aes(orf8ko, color=hosp,fill=hosp)) +
+  geom_bar(position="fill",width=0.7) +
+  ylab("Proportion") +
+  xlab("ORF8KO") + 
+  scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  theme_minimal() +
+  theme(text = element_text(size = 10)) +
+  ggtitle(label="Non-VOC viruses")
+print(plot_hosp)
+print(kable(or_hosp[2:6,], caption = "Odds Ratio of Hospitalization for Non-VOC viruses.",align="lllll"))
+
+cat(paste("*Death:*\n"))
+freq_tab_death <- df_death %>%
+  filter(Nextstrain_clade == "20A" | Nextstrain_clade=="20B"|Nextstrain_clade=="20C"|Nextstrain_clade=="20D"|Nextstrain_clade=="20G") %>%
+  count(died)%>%
+  mutate(prop= prop.table(n))
+prop_death <- freq_tab_death$prop[2]
+count_tab_death <- df_death %>%
+  filter(Nextstrain_clade == "20A" | Nextstrain_clade=="20B"|Nextstrain_clade=="20C"|Nextstrain_clade=="20D"|Nextstrain_clade=="20G") %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_death$prop[2]
+ss_death <- get_sample_size(prop_death, prop_ko,effect)
+cat(paste("\nSample size needed to detect a ",format(effect*100,digits=2), "% effect on risk of death with 90% confidence & 70% power:: ",format(ss_death,digits=3)))
+print(kable(count_tab_death, caption = "Non-VOC samples with death data."))
+reg_death <- glm(died ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_death[df_death$Nextstrain_clade == "20A" | df_death$Nextstrain_clade=="20B"|df_death$Nextstrain_clade=="20C"|df_death$Nextstrain_clade=="20D"|df_death$Nextstrain_clade=="20G",])
+or_death <- as.tibble(questionr::odds.ratio(reg_death, level=(1-(0.05))), rownames = "Predictor")
+plot_death <- df_death %>%
+  filter(Nextstrain_clade == "20A" | Nextstrain_clade=="20B"|Nextstrain_clade=="20C"|Nextstrain_clade=="20D"|Nextstrain_clade=="20G") %>%
+  ggplot(aes(orf8ko, color=died,fill=died)) +
+  geom_bar(position="fill",width=0.7) +
+  ylab("Proportion") +
+  xlab("ORF8KO") + 
+  scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  theme_minimal() +
+  theme(text = element_text(size = 10)) +
+  ggtitle(label="Non-VOC viruses")
+print(plot_death)
+print(kable(or_death[2:6,], caption = "Odds Ratio of dying for Non-VOC viruses.",align="lllll"))
+```
+By power calculations, we do not have enough samples to detect a 50% effect on
+clinical severity due to ORF8KO.
+
+For hospitalization, only increased age is a significantpredictor. Sex & 
+vaccination status are not. For death, age, sex, and vaccination status are all 
+significant predictors for risk of death. However, vaccination is a risk factor 
+for death rather than protective. I think Miguel & Steph ran into this problem 
+in their analysis as well. Since vaccines were rolled out around the same time 
+VOC's appeared, people who were vaccinated and had a non-VOC virus were likely 
+to be vaccinated early when vaccines were being prioritized to high-risk groups.
+
+```{r, echo=FALSE, message=FALSE,fig.dim = c(3,2), out.width="50%",warning=FALSE,results="asis", fig.align='center'}
+## Gamma
+cat(paste("##","Gamma\n*Hospitalization:*\n"))
+freq_tab_hosp <- df_hosp %>%
+  filter(Nextstrain_clade == "20J (Gamma, V3)") %>%
+  count(hosp)%>%
+  mutate(prop= prop.table(n))
+prop_hosp <- freq_tab_hosp$prop[2]
+count_tab_hosp <- df_hosp %>%
+  filter(Nextstrain_clade == "20J (Gamma, V3)") %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_hosp$prop[2]
+ss_hosp <- get_sample_size(prop_hosp, prop_ko,effect)
+cat(paste("\nSample size needed to detect a ",format(effect*100,digits=2), "% effect on risk of hospitalization with 90% confidence & 70% power:: ",format(ss_hosp,digits=4)))
+print(kable(count_tab_hosp, caption = "Gamma samples with hospitalization data."))
+reg_hosp <- glm(hosp ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_hosp[df_hosp$Nextstrain_clade == "20J (Gamma, V3)",])
+  or_hosp <- as.tibble(questionr::odds.ratio(reg_hosp, level=(1-(0.05))), rownames = "Predictor")
+  plot_hosp <- df_hosp %>%
+    filter(Nextstrain_clade == "20J (Gamma, V3)") %>%
+    ggplot(aes(orf8ko, color=hosp,fill=hosp)) +
+    geom_bar(position="fill",width=0.7) +
+    ylab("Proportion") +
+    xlab("ORF8KO") + 
+    scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
+    scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
+    theme_minimal() +
+    theme(text = element_text(size = 10)) +
+    ggtitle(label="Gamma")
+  print(plot_hosp)
+  print(kable(or_hosp[2:6,], caption = "Odds Ratio of Hospitalization for Gamma.",align="lllll"))
+cat(paste("*Death:*\n"))
+freq_tab_death <- df_death %>%
+  filter(Nextstrain_clade == "20J (Gamma, V3)") %>%
+  count(died)%>%
+  mutate(prop= prop.table(n))
+prop_death <- freq_tab_death$prop[2]
+count_tab_death <- df_death %>%
+  filter(Nextstrain_clade == "20J (Gamma, V3)") %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_death$prop[2]
+ss_death <- get_sample_size(prop_death, prop_ko,effect)
+cat(paste("\nSample size needed to detect a ",format(effect*100,digits=2), "% effect on risk of death with 90% confidence & 70% power:: ",format(ss_death,digits=3)))
+print(kable(count_tab_death, caption = "Gamma samples with death data."))
 ```
 ```{r, echo=FALSE, message=FALSE,fig.dim = c(3,2), out.width="50%",warning=FALSE,results="asis", fig.align='center'}
-for (variant in clades_30_death){
-  cat(paste("##",variant,"\n","*Hospitalization:*\n"))
-  freq_tab_hosp <- df_hosp %>%
-    filter(Nextstrain_clade==variant) %>%
-    group_by(orf8ko) %>%
-    summarise(n_samples = n())
-  print(kable(freq_tab_hosp, caption = paste("Samples with hospitalization data in ", variant, ".")))
-  if (variant %in% clades_30_hosp){
-      reg_hosp <- glm(hosp ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_hosp[df_hosp$Nextstrain_clade==variant,])
-      or_hosp <- as.tibble(questionr::odds.ratio(reg_hosp, level=(1-(0.05))), rownames = "Predictor")
-      plot_hosp <- df_hosp %>%
-        filter(Nextstrain_clade==variant) %>%
-        ggplot(aes(orf8ko, color=hosp,fill=hosp)) +
-        geom_bar(position="fill",width=0.7) +
-        ylab("Proportion") +
-        xlab("ORF8KO") + 
-        scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
-        scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
-        theme_minimal() +
-        theme(text = element_text(size = 10)) +
-        ggtitle(label=variant)
-      print(plot_hosp)
-      print(kable(or_hosp[2:6,], caption = paste("Odds Ratio of Hospitalization for ",variant,"."),align="lllll"))
-  }
-  cat(paste("*Death:*\n"))
-  freq_tab_death <- df_death %>%
-    filter(Nextstrain_clade==variant) %>%
-    group_by(orf8ko) %>%
-    summarise(n_samples = n())
-  print(kable(freq_tab_death, caption = paste("Samples with death data in ", variant, ".")))
-  reg_death <- glm(died ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_death[df_death$Nextstrain_clade==variant,])
-      or_death <- as.tibble(questionr::odds.ratio(reg_death, level=(1-(0.05))), rownames = "Predictor")
-      plot_death <- df_death %>%
-        filter(Nextstrain_clade==variant) %>%
-        ggplot(aes(orf8ko, color=died,fill=died)) +
-        geom_bar(position="fill",width=0.7) +
-        ylab("Proportion") +
-        xlab("ORF8KO") + 
-        scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
-        scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
-        theme_minimal() +
-        theme(text = element_text(size = 10)) +
-        ggtitle(label=variant)
-      print(plot_death)
-      print(kable(or_death[2:6,], caption = paste("Odds Ratio of dying for ",variant,"."),align="lllll"))
-}
+reg_death <- glm(died ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_death[df_death$Nextstrain_clade == "20J (Gamma, V3)",])
+or_death <- as.tibble(questionr::odds.ratio(reg_death, level=(1-(0.05))), rownames = "Predictor")
+plot_death <- df_death %>%
+  filter(Nextstrain_clade == "20J (Gamma, V3)") %>%
+  ggplot(aes(orf8ko, color=died,fill=died)) +
+  geom_bar(position="fill",width=0.7) +
+  ylab("Proportion") +
+  xlab("ORF8KO") + 
+  scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  theme_minimal() +
+  theme(text = element_text(size = 10)) +
+  ggtitle(label="Gamma")
+print(plot_death)
+print(kable(or_death[2:6,], caption = "Odds Ratio of dying for Gamma.",align="lllll"))
 ```
-## Conclusion
-When broken down by variant, Orf8KO is not correlated with clinical severity in
-all but one variant. In Gamma, Orf8KO is correlated with an increased risk of
-hospitalization. There is not an increased risk of death. 
+Age, sex, and vaccination are all statistically significant predictors for risk
+of hospitalization. Orf8KO is associated with an increased risk of
+hospitalization. By power calcs, we do not actually have enough samples to
+detect a 50% effect on severity, but we're observing a much larger effect. For 
+risk of death, only age and sex are significant predictors. Vaccination status 
+is not significant.
 
-Overall, Orf8KO does not seem to be associated with changes in clinical severity
-in Washington State.
+```{r, echo=FALSE, message=FALSE,fig.dim = c(3,2), out.width="50%",warning=FALSE,results="asis", fig.align='center'}
+## Delta
+cat(paste("##","Delta\n*Hospitalization:*\n"))
+freq_tab_hosp <- df_hosp %>%
+  filter(Nextstrain_clade == "21I (Delta)" | Nextstrain_clade=="21J (Delta)"|Nextstrain_clade=="21A (Delta)") %>%
+  count(hosp)%>%
+  mutate(prop= prop.table(n))
+prop_hosp <- freq_tab_hosp$prop[2]
+count_tab_hosp <- df_hosp %>%
+  filter(Nextstrain_clade == "21I (Delta)" | Nextstrain_clade=="21J (Delta)"|Nextstrain_clade=="21A (Delta)") %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_hosp$prop[2]
+ss_hosp <- get_sample_size(prop_hosp, prop_ko,effect)
+cat(paste("\nSample size needed to detect a ",format(effect*100,digits=2), "% effect on risk of hospitalization with 90% confidence & 70% power:: ",format(ss_hosp,digits=4)))
+print(kable(count_tab_hosp, caption = "Delta samples with hospitalization data."))
+
+reg_hosp <- glm(hosp ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_hosp[df_hosp$Nextstrain_clade == "21I (Delta)" | df_hosp$Nextstrain_clade=="21J (Delta)"|df_hosp$Nextstrain_clade=="21A (Delta)",])
+  or_hosp <- as.tibble(questionr::odds.ratio(reg_hosp, level=(1-(0.05))), rownames = "Predictor")
+  plot_hosp <- df_hosp %>%
+    filter(Nextstrain_clade == "21I (Delta)" | Nextstrain_clade=="21J (Delta)"|Nextstrain_clade=="21A (Delta)") %>%
+    ggplot(aes(orf8ko, color=hosp,fill=hosp)) +
+    geom_bar(position="fill",width=0.7) +
+    ylab("Proportion") +
+    xlab("ORF8KO") + 
+    scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
+    scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
+    theme_minimal() +
+    theme(text = element_text(size = 10)) +
+    ggtitle(label="Delta")
+  print(plot_hosp)
+  print(kable(or_hosp[2:6,], caption = "Odds Ratio of Hospitalization for Delta.",align="lllll"))
+cat(paste("*Death:*\n"))
+freq_tab_death <- df_death %>%
+  filter(Nextstrain_clade == "21I (Delta)" | Nextstrain_clade=="21J (Delta)"|Nextstrain_clade=="21A (Delta)") %>%
+  count(died)%>%
+  mutate(prop= prop.table(n))
+prop_death <- freq_tab_death$prop[2]
+count_tab_death <- df_death %>%
+  filter(Nextstrain_clade == "21I (Delta)" | Nextstrain_clade=="21J (Delta)"|Nextstrain_clade=="21A (Delta)") %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_death$prop[2]
+ss_death <- get_sample_size(prop_death, prop_ko,effect)
+cat(paste("\nSample size needed to detect a ",format(effect*100,digits=2), "% effect on risk of death with 90% confidence & 70% power:: ",format(ss_death,digits=3)))
+print(kable(count_tab_death, caption = "Delta samples with death data."))
+
+reg_death <- glm(died ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_death[df_death$Nextstrain_clade == "21I (Delta)" | df_death$Nextstrain_clade=="21J (Delta)"|df_death$Nextstrain_clade=="21A (Delta)",])
+or_death <- as.tibble(questionr::odds.ratio(reg_death, level=(1-(0.05))), rownames = "Predictor")
+plot_death <- df_death %>%
+  filter(Nextstrain_clade == "21I (Delta)" | Nextstrain_clade=="21J (Delta)"|Nextstrain_clade=="21A (Delta)") %>%
+  ggplot(aes(orf8ko, color=died,fill=died)) +
+  geom_bar(position="fill",width=0.7) +
+  ylab("Proportion") +
+  xlab("ORF8KO") + 
+  scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  theme_minimal() +
+  theme(text = element_text(size = 10)) +
+  ggtitle(label="Delta")
+print(plot_death)
+print(kable(or_death[2:6,], caption = "Odds Ratio of dying for Delta.",align="lllll"))
+```
+Sex, age, and vaccination status are statistically significant predictors of
+clinical outcomes. We do not have enough hospitalization or death samples to 
+detect a 50% effect on clinical severity.
+
+```{r, echo=FALSE, message=FALSE,fig.dim = c(3,2), out.width="50%",warning=FALSE,results="asis", fig.align='center'}
+## Omicron
+cat(paste("##","Omicron\n*Hospitalization:*\n"))
+freq_tab_hosp <- df_hosp %>%
+  filter(Nextstrain_clade == "21K (Omicron)" | Nextstrain_clade=="21L (Omicron)"|Nextstrain_clade=="21M (Omicron)"|Nextstrain_clade == "22A (Omicron)" | Nextstrain_clade=="22B (Omicron)"|Nextstrain_clade=="22C (Omicron)"|Nextstrain_clade=="22D (Omicron)") %>%
+  count(hosp)%>%
+  mutate(prop= prop.table(n))
+prop_hosp <- freq_tab_hosp$prop[2]
+count_tab_hosp <- df_hosp %>%
+  filter(Nextstrain_clade == "21K (Omicron)" | Nextstrain_clade=="21L (Omicron)"|Nextstrain_clade=="21M (Omicron)"|Nextstrain_clade == "22A (Omicron)" | Nextstrain_clade=="22B (Omicron)"|Nextstrain_clade=="22C (Omicron)"|Nextstrain_clade=="22D (Omicron)") %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_hosp$prop[2]
+ss_hosp <- get_sample_size(prop_hosp, prop_ko,effect)
+cat(paste("\nSample size needed to detect a ",format(effect*100,digits=2), "% effect on risk of hospitalization with 90% confidence & 70% power:: ",format(ss_hosp,digits=4)))
+print(kable(count_tab_hosp, caption = "Omicron samples with hospitalization data."))
+
+reg_hosp <- glm(hosp ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_hosp[df_hosp$Nextstrain_clade == "21K (Omicron)" | df_hosp$Nextstrain_clade=="21L (Omicron)"|df_hosp$Nextstrain_clade=="21M (Omicron)"|df_hosp$Nextstrain_clade == "22A (Omicron)" | df_hosp$Nextstrain_clade=="22B (Omicron)"|df_hosp$Nextstrain_clade=="22C (Omicron)"|df_hosp$Nextstrain_clade=="22D (Omicron)",])
+  or_hosp <- as.tibble(questionr::odds.ratio(reg_hosp, level=(1-(0.05))), rownames = "Predictor")
+  plot_hosp <- df_hosp %>%
+    filter(Nextstrain_clade == "21K (Omicron)" | Nextstrain_clade=="21L (Omicron)"|Nextstrain_clade=="21M (Omicron)"|Nextstrain_clade == "22A (Omicron)" | Nextstrain_clade=="22B (Omicron)"|Nextstrain_clade=="22C (Omicron)"|Nextstrain_clade=="22D (Omicron)") %>%
+    ggplot(aes(orf8ko, color=hosp,fill=hosp)) +
+    geom_bar(position="fill",width=0.7) +
+    ylab("Proportion") +
+    xlab("ORF8KO") + 
+    scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
+    scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
+    theme_minimal() +
+    theme(text = element_text(size = 10)) +
+    ggtitle(label="Omicron")
+  print(plot_hosp)
+  print(kable(or_hosp[2:6,], caption = "Odds Ratio of Hospitalization for Omicron.",align="lllll"))
+  
+cat(paste("*Death:*\n"))
+freq_tab_death <- df_death %>%
+  filter(Nextstrain_clade == "21K (Omicron)" | Nextstrain_clade=="21L (Omicron)"|Nextstrain_clade=="21M (Omicron)"|Nextstrain_clade == "22A (Omicron)" | Nextstrain_clade=="22B (Omicron)"|Nextstrain_clade=="22C (Omicron)"|Nextstrain_clade=="22D (Omicron)") %>%
+  count(died)%>%
+  mutate(prop= prop.table(n))
+prop_death <- freq_tab_death$prop[2]
+count_tab_death <- df_death %>%
+  filter(Nextstrain_clade == "21K (Omicron)" | Nextstrain_clade=="21L (Omicron)"|Nextstrain_clade=="21M (Omicron)"|Nextstrain_clade == "22A (Omicron)" | Nextstrain_clade=="22B (Omicron)"|Nextstrain_clade=="22C (Omicron)"|Nextstrain_clade=="22D (Omicron)") %>%
+  count(orf8ko) %>%
+  mutate(prop = prop.table(n))
+prop_ko = count_tab_death$prop[2]
+ss_death <- get_sample_size(prop_death, prop_ko,effect)
+cat(paste("\nSample size needed to detect a ",format(effect*100,digits=2), "% effect on risk of death with 90% confidence & 70% power:: ",format(ss_death,digits=3)))
+print(kable(count_tab_death, caption = "Omicron samples with death data."))
+
+reg_death <- glm(died ~ orf8ko + age_group + sex_at_birth + vaccinated, family = "binomial", data = df_death[df_death$Nextstrain_clade == "21K (Omicron)" | df_death$Nextstrain_clade=="21L (Omicron)"|df_death$Nextstrain_clade=="21M (Omicron)"|df_death$Nextstrain_clade == "22A (Omicron)" | df_death$Nextstrain_clade=="22B (Omicron)"|df_death$Nextstrain_clade=="22C (Omicron)"|df_death$Nextstrain_clade=="22D (Omicron)",])
+or_death <- as.tibble(questionr::odds.ratio(reg_death, level=(1-(0.05))), rownames = "Predictor")
+plot_death <- df_death %>%
+  filter(Nextstrain_clade == "21K (Omicron)" | Nextstrain_clade=="21L (Omicron)"|Nextstrain_clade=="21M (Omicron)"|Nextstrain_clade == "22A (Omicron)" | Nextstrain_clade=="22B (Omicron)"|Nextstrain_clade=="22C (Omicron)"|Nextstrain_clade=="22D (Omicron)") %>%
+  ggplot(aes(orf8ko, color=died,fill=died)) +
+  geom_bar(position="fill",width=0.7) +
+  ylab("Proportion") +
+  xlab("ORF8KO") + 
+  scale_fill_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  scale_color_manual(values =c("#ADEFD1FF","#00203FFF")) +
+  theme_minimal() +
+  theme(text = element_text(size = 10)) +
+  ggtitle(label="Omicron")
+print(plot_death)
+print(kable(or_death[2:6,], caption = "Odds Ratio of dying for Omicron.",align="lllll"))
+```
+Age, sex, and vaccination are all predictive of clinical outcome. We have enough
+hospitalization samples to detect a 50% risk reduction in clinical severity.
+However, we're seeing more like a 13% risk reduction in severity, and we do not
+have enough samples to detect if that is real or not. We also definitely do not
+have enough death sampls to detect risk reductions in clinical severity.
+
+## Conclusion
+In aggregate, Orf8KO is correlated with reduced clinical severity. However, 
+Orf8KO is not distributed equally across variant, so variant is a potential 
+confounder.
+
+When broken down by variant, Orf8KO is not correlated with clinical severity,
+except for with one variant. In this case, ORF8KO is correlated with an 
+increased risk of hospitalization (OR: 2.25, 95% CI:1.26-3.88). However, we do
+not really have the power to detect differences when the analysis is split by
+variant.
+
+We should probably find another way to address the variant confounder in the
+aggregate dataset.
