--- a/notebooks/intrahost_analysis.ipynb
+++ b/notebooks/intrahost_analysis.ipynb
@@ -6,11 +6,15 @@
    "metadata": {},
    "source": [
     "## Analyze nonsense mutation rates in intrahost variants\n",
+    "\n",
+    "**Note: Start at 2 to replicate from filtered intrahost variants**\n",
+    "\n",
     "1. First aggregate variants:\n",
     "    - aggregate all samples\n",
     "    - filter for samples with low mean coverage, lots of reads trimmed, or high percent of N's\n",
     "    - aggregate SNVs for filtered samples\n",
     "2. Analyze SNVs.\n",
+    "\n",
     "\n"
    ]
   },
