Log source data

--- a/notebooks/Fig4.ipynb
+++ b/notebooks/Fig4.ipynb
@@ -528,12 +528,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c3d623df-d7c6-4e9b-a749-ad0ebdac97b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "c13db4f2-55ea-4068-9ad0-59451080c19f",
    "metadata": {},
    "outputs": [],
    "source": [
     "genes=['ORF1a','ORF1b','Spike','ORF3a','E','M','ORF6','ORF7a','ORF7b','ORF8','N']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c31c8bb8-492b-4392-84ef-28557da750e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degen[degen.gene.isin(genes)][['gene','dN_dS','dN_dS_min','dN_dS_max','dStop_dS','dStop_dS_min','dStop_dS_max']].to_csv('figs/fig4/4A_SourceData.tsv',sep='\\t',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1f7dbe61-3d2c-464d-9f42-32db63b9e359",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degen[degen.gene.isin(genes)][['gene','dS','dS_min','dS_max','dN','dN_min','dN_max','dStop','dStop_min','dStop_max']].to_csv('figs/supplemental/S4_SourceData.tsv',sep='\\t',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "eaef763d-3626-49cf-a25a-ea6e413ae66a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "og[og.gene.isin(genes)][['gene','dN_dS','dN_dS_min','dN_dS_max','dStop_dS','dStop_dS_min','dStop_dS_max']].to_csv('figs/supplemental/S5_SourceData.tsv',sep='\\t',index=False)"
    ]
   },
   {
@@ -1345,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "f71da284-eb9f-49b0-82e0-3574bcf896bc",
    "metadata": {},
    "outputs": [],
@@ -1358,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "9de415fe-4b08-49c6-bc4c-cd1cc97dc514",
    "metadata": {},
    "outputs": [],
@@ -1372,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "59eccbba-2a88-484a-8743-fad724905ada",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1719,7 @@
        "21  ORF1a            NaN        no  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1692,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "dab0a7bf-7dfe-4997-ab64-c13910d52847",
    "metadata": {},
    "outputs": [],
@@ -1704,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "8c1c27ee-bcb1-4b9e-ae9b-d680ce3b8645",
    "metadata": {},
    "outputs": [],
@@ -1722,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "1f84e7b3-66ab-4195-945e-e382e1049a08",
    "metadata": {},
    "outputs": [],
@@ -1864,6 +1902,45 @@
    ],
    "source": [
     "plot_rates_split(rates,'figs/supplemental/growthrate_obermeyer_degen.jpg') ## FIX THE LEGEND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a4acff81-6cb0-4cc9-b709-c5fec34a2b87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/b5/2grxct1x69395r8j6vkk07bc0000gp/T/ipykernel_46862/4198124632.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  obermeyerRates = rates[rates.Variable!='(Intercept)'][(rates.Regression=='withObermeyer')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "obermeyerRates = rates[rates.Variable!='(Intercept)'][(rates.Regression=='withObermeyer')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "107f1d92-bd14-4f10-b9aa-d8204b6b907a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obermeyerRates['mutType'] = np.where(obermeyerRates.Variable.str.contains('missense'),'missense','nonsense')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8f6cb5b0-61b2-4b10-b751-8b58179df8c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obermeyerRates[['Gene','mutType','obermeyer','Fold_change', '2.5 %','97.5 %']].to_csv('figs/supplemental/S7_SourceData.tsv',sep='\\t',index=False)"
    ]
   },
   {
@@ -2212,8 +2289,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "f2e50003-b5cc-4d42-9890-df362ed141f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratesSource = bigrates[bigrates.Gene!='ORF9b']\n",
+    "ratesSource[ratesSource.Variable!='(Intercept)'].to_csv('figs/fig4/4B_SourceData.tsv',sep='\\t',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21606e5d-6cc1-4d58-a9d8-9c689f3581ef",
    "metadata": {},
    "outputs": [],
    "source": []
