--- a/notebooks/PlotMutationClusters.ipynb
+++ b/notebooks/PlotMutationClusters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "c2cbafb0-d747-4337-8864-7a32d46673f3",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "8df050e5-630a-4d51-9e9e-d7c74338fcf4",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "a45c527b-b1f1-433b-9494-fdc5e63689dc",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "4583258a-3900-4c14-9152-633acb049fde",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "53dbfdba-1733-4b4a-9381-d5809b970ff1",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "afde65fc-fb12-479e-bf6e-aa02e1b868d3",
    "metadata": {},
    "outputs": [
@@ -115,13 +115,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b5/2grxct1x69395r8j6vkk07bc0000gp/T/ipykernel_5283/767953228.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/b5/2grxct1x69395r8j6vkk07bc0000gp/T/ipykernel_47412/767953228.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  dataset['days'] = dataset['days_circulated']+1\n",
-      "/var/folders/b5/2grxct1x69395r8j6vkk07bc0000gp/T/ipykernel_5283/767953228.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/b5/2grxct1x69395r8j6vkk07bc0000gp/T/ipykernel_47412/767953228.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "377d3a92-5e71-49a0-8f5b-f0a7d3d7a789",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "9b56b3ff-e417-4839-a0b1-4b4fbb2084a6",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "6365df52-2562-483d-9a39-4a8edc5a32f9",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "897b717a-3256-4b64-9f06-b6e1d335875a",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "d65460ec-2581-4c8a-bcf8-ec410307d1da",
    "metadata": {},
    "outputs": [
@@ -580,7 +580,7 @@
        "[706491 rows x 27 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "3e04919c-59b4-47f5-a2e9-ae7046437706",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "fa55cb0e-ab38-4768-a18f-656b7a27cd44",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
        "Name: R / R_A 95% ci lower, Length: 706491, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "8d37789f-b6be-4b23-ad56-848a3a7e3a18",
    "metadata": {},
    "outputs": [
@@ -660,15 +660,15 @@
       "text/plain": [
        "Index(['node_id', 'aa_mutations', 'nt_mutations', 'codon_change', 'mut_type',\n",
        "       'branch_muts_counts', 'gene', 'leaf_count', 'mut_count', 'mut_density',\n",
-       "       'rev_from_lineage', 'days_circulated', 'parent', 'cluster',\n",
-       "       'aa_mutation', 'residue', 'days', 'rank', 'mean/stddev',\n",
+       "       'rev_from_lineage', 'days_circulated', 'date_observed', 'parent',\n",
+       "       'cluster', 'aa_mutation', 'residue', 'days', 'rank', 'mean/stddev',\n",
        "       'log10(P(ΔR > 1))', 'Δ log R', 'Δ log R 95% ci lower',\n",
        "       'Δ log R 95% ci upper', 'R / R_A', 'R / R_A 95% ci lower',\n",
        "       'R / R_A 95% ci upper', 'emerged in lineages'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "84d755e7-7949-457c-8ab6-f82d64ad69fc",
    "metadata": {},
    "outputs": [],
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "21b3ebcd-6950-4e91-86f7-8245b6c20aba",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "      <td>1.039110</td>\n",
        "      <td>1.04590</td>\n",
        "      <td>AY.72 (B.1.617.2.72)</td>\n",
-       "      <td>missense: no fitness enhancement</td>\n",
+       "      <td>missense: fitness enhancing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -902,14 +902,14 @@
        "    emerged in lineages                           fitness  \n",
        "0                   NaN  missense: no fitness enhancement  \n",
        "1                   NaN  missense: no fitness enhancement  \n",
-       "2  AY.72 (B.1.617.2.72)  missense: no fitness enhancement  \n",
+       "2  AY.72 (B.1.617.2.72)       missense: fitness enhancing  \n",
        "3   B.1.160.21, B.1.298  missense: no fitness enhancement  \n",
        "4                   NaN  missense: no fitness enhancement  \n",
        "\n",
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,6 +1859,50 @@
     "\n",
     "    if path:\n",
     "        fig.savefig(path,dpi=300,bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1b8d3098-7986-4d5d-a675-16be6394049b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested = pd.concat([orf8_nested,spike_nested,orf1a_nested])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ab9ba285-ece8-458b-97e2-da1570ae9045",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ORF8', 'M', 'ORF1a', 'ORF1b', 'N', 'ORF9b', 'E', 'S', 'ORF6',\n",
+       "       'ORF7a', 'ORF7b', 'ORF3a'], dtype=object)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nested.gene.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1765e4ee-9b29-4f8e-9f44-22ce19b0d917",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density = nested[nested.gene.isin(['ORF8','S','ORF1a'])][['node_id','aa_mutations','nt_mutations','mut_type','gene','leaf_count','days_circulated','fitness']]\n",
+    "\n",
+    "density.to_csv('figs/supplemental/S6_SourceData.tsv',sep='\\t',index=False)\n"
    ]
   },
   {
