--- a/notebooks/intrahost_analysis.ipynb
+++ b/notebooks/intrahost_analysis.ipynb
@@ -2199,6 +2199,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "f27b0e56-a6e3-4c78-9c1b-c036c70805b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/b5/2grxct1x69395r8j6vkk07bc0000gp/T/ipykernel_39343/3826017702.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  plottedA['iNonsense_Rate'] = plottedA['norm']\n"
+     ]
+    }
+   ],
+   "source": [
+    "plottedA = stopCounts[(stopCounts.Gene!='ORF9b')&(stopCounts.Gene!='ORF10')]\n",
+    "plottedA['iNonsense_Rate'] = plottedA['norm']\n",
+    "plottedA[['Gene','iNonsense_Rate']].to_csv('figs/fig3/3A_SourceData.tsv',sep='\\t',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "3e034230-bbe1-40fb-949d-9e35c0f36a02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stops[stops.Gene!='ORF10'][['gisaid_id','Gene','perFreq','AAPOS','AAREF','AASUB','TCOV','VCOV','NTPOS','snpid','nsp','NSPPOS','NSPREF','NSPSUB']].to_csv('figs/fig3/3B_SourceData.tsv',sep='\\t',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "id": "b870829e-32ad-45d9-a125-470ab9b96d76",
    "metadata": {},
