--- a/notebooks/cladeSelection.ipynb
+++ b/notebooks/cladeSelection.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "4c0de9fd-5bef-4322-9285-43dfe56802ae",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "7465b33e-5dc5-4a8d-a6d0-5528c0337f12",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "a8f5bab5-761a-4af2-988a-e70c1e37b2c8",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "ab56330a-f6e4-4148-a4ca-174088492bc7",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "1db7f61e-81c5-403c-91ee-2ab673ab574a",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "b5139264-39ca-4497-b7b2-f241ebdd0152",
    "metadata": {},
    "outputs": [],
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "1266dc2c-1578-43f4-9cbe-e5dee8ffaa5a",
    "metadata": {},
    "outputs": [],
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "id": "cdc272e4-91ed-47cb-bbd3-bd915bdc50b4",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1052,7 @@
        "       '20I (Alpha,V1)', '20J (Gamma,V3)'], dtype=object)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1991,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "id": "fdff8fbd-ccd3-4d3f-af14-b8c7bec1660f",
    "metadata": {},
    "outputs": [],
@@ -3025,6 +3025,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "21d5f28d-d698-4c47-bfa6-bf29af72c99b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('usher/trimmed/clades_nested/ORF8_logClustSize_adjusted_bootstrapped.tsv','r') as f:\n",
+    "    scaled = pd.read_csv(f,sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 136,
    "id": "0707ce0e-423a-4e5e-8eff-81533f033d1d",
    "metadata": {},
@@ -3110,7 +3121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 18,
    "id": "4d6ed68e-d561-443a-b44a-62683ab87518",
    "metadata": {},
    "outputs": [],
@@ -3537,7 +3548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 15,
    "id": "e404ef4d-a059-4f6f-98de-ab42afcf720a",
    "metadata": {},
    "outputs": [],
@@ -3557,7 +3568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 16,
    "id": "2be9ea95-7456-48d1-a1eb-e98a52311fbb",
    "metadata": {},
    "outputs": [],
@@ -3572,7 +3583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 19,
    "id": "d54bb4e4-ed0c-4aaa-86ae-b6f9029560cd",
    "metadata": {},
    "outputs": [],
@@ -3583,7 +3594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 20,
    "id": "84a5b9d1-ad8f-4482-af3e-1356f1fb22e5",
    "metadata": {},
    "outputs": [
@@ -3702,7 +3713,7 @@
        "[106 rows x 3 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3713,7 +3724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 21,
    "id": "1a96b892-e081-4976-b9ca-f68c565c722c",
    "metadata": {},
    "outputs": [],
@@ -3723,7 +3734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 22,
    "id": "1de22f7b-8d75-46d3-8298-9851c0e9e496",
    "metadata": {},
    "outputs": [],
@@ -3756,7 +3767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 23,
    "id": "c2a48f85-c486-4d97-88e1-9e53ab2c7bed",
    "metadata": {},
    "outputs": [
@@ -3903,7 +3914,7 @@
        "4  1.149171  mut_typemissense     4.221004  2.662789   6.447617    5.145966  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4035,6 +4046,31 @@
    ],
    "source": [
     "selection[selection.max_ci<1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3f09b7c2-b5d0-43c9-b6f4-ae1032e257c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/b5/2grxct1x69395r8j6vkk07bc0000gp/T/ipykernel_38521/2105599355.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  source['geomMean_clusterSize_ratio'] = source['scaled']\n"
+     ]
+    }
+   ],
+   "source": [
+    "source = selection[(selection.mut_type!='synonymous') & (selection.clade.isin(nextstrain_clades))]\n",
+    "source['geomMean_clusterSize_ratio'] = source['scaled']\n",
+    "source[['clade','mut_type','dnds','max_dnds','min_dnds','geomMean_clusterSize_ratio','min_ci','max_ci']].to_csv('figs/supplemental/S8_SourceData.tsv',sep='\\t',index=False)"
    ]
   },
   {
