get total numbers

--- a/notebooks/intrahost_analysis.ipynb
+++ b/notebooks/intrahost_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "id": "959c0ddf-adf7-444a-ac39-49cc36a3e881",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "id": "0b3a9712-bbda-485c-b648-88a8f5433ca0",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "530cd307-8aed-4e64-a008-caac81c16783",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "id": "d1746b2b-7491-4ec5-8e2b-1a4cbd78f9b0",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "id": "990c049a-b9e4-41d1-90d9-6f3c1b47b0b3",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "id": "95fa91c0-a0ed-4233-8ccc-3e086399e620",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
+   "id": "9cc76353-c78b-4ece-8298-646512e1a982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qc[['gisaid_id']].to_csv('data/gisaid_intrahost.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "be126dfe-5f22-4bbf-aa75-f7555bc65c81",
    "metadata": {},
    "outputs": [],
@@ -188,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "id": "742af837-dff8-4809-be0f-3cd98c11c02c",
    "metadata": {},
    "outputs": [],
